--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 
 <body>
-<input type="button" value="+" onClick="zoomUp()">
-<input type="button" value="-" onClick="zoomDown()"><br />
+<input type="text" id="place" size="30" maxlength="20">
+ <input type="button" value="GO!" onclick="test()">
+
+
+<br />
 <div id="map" style="width:100%;height:100%;"></div>
 <div id="guide"></div>
 
