--- a/index.html
+++ b/index.html
@@ -29,3 +29,128 @@
 <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+<!DOCTYPE HTML>
+<!--
+	Lens by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+<head>
+    <title>Lens by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/thema/css/main.css" />
+    <link rel="stylesheet" href="assets/thema/css/custom.css" />
+    <link rel="stylesheet" href="assets/thema/css/custom2.css" />
+    <noscript><link rel="stylesheet" href="assets/thema/css/noscript.css" /></noscript>
+
+    <link href="assets/css/app.css" rel="stylesheet" type="text/css" media="all" />
+
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+</head>
+<body class="is-loading-0 is-loading-1 is-loading-2 fullscreen">
+
+<!-- Main -->
+<div id="main">
+
+    <!-- Header -->
+    <header id="header"><!--- font-family: 'Bree Serif', serif; --->
+        <h1 id="logo" style="font-family: 'Lora', serif;">BIHAKU NABI</h1>
+        <p>be happy BIHAKU GIRL</p>
+        <!---
+        <ul class="icons">
+            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
+        --->
+    </header>
+
+    <!-- Thumbnail -->
+    <section id="thumbnails">
+        <article>
+            <a class="thumbnail" href="images/fulls/01.jpg"><div>NAVI</div></a>
+        </article>
+        <article>
+            <a class="thumbnail" href="images/fulls/02.jpg">もっと美白</a>
+        </article>
+        <article>
+            <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center">日焼け止めランキング</a>
+        </article>
+        <article>
+            <a class="thumbnail" href="images/fulls/04.jpg">使い方</a>
+        </article>
+        <article>
+            <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center">クチコミ</a>
+        </article>
+    </section>
+
+    <br>
+    <center><b>おすすめ日陰</b></center>
+    <div id="comentWrapper">
+        mizuki1437：とてもよいポイントです！<br>
+        mizuki1437：とてもよいポイントです！<br><br><br><br><br>
+    </div>
+</div>
+
+<div id="viewer">
+    <div class="inner">
+        <div class="toggle"></div>
+    </div>
+    <div class="slide active">
+        <div class="social">
+            <div id="social-icon" style="display:inline-block;">
+                <a href="#" class="btn04"><i class="fa fa-envira" aria-hidden="true"></i></a>
+            </div>
+        </div>
+
+        <div id="caption" class="caption">
+            <form action="" method="post">
+                <textarea id="recommend" rows="1" placeholder="私のおススメポイントは？"></textarea>
+                <a href="#" class="button" style="display: none"><i class="fa fa-weixin"></i>投稿</a>
+            </form>
+        </div>
+        <div>
+            <input type="text" id="place" size="30" maxlength="20">
+            <input type="button" value="GO!" onclick="test()">
+
+            <br />
+            <div id="map" class="image"></div>
+            <div id="guide"></div>
+
+            <div id="log"></div>
+            <form id="speech">
+                <input type="button" value="start" id="recognition" name="recognition" onclick="test()" />
+            </form>
+            
+        </div>
+    </div>
+</div>
+
+<!-- Scripts -->
+<script src="assets/thema/js/jquery.min.js"></script>
+<script src="assets/thema/js/skel.min.js"></script>
+<!--[if lte IE 8]><script src="assets/thema/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/thema/js/main.js"></script>
+
+<script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?key=AIzaSyA3EFRj6lO1m-gWC0wkRFGnGFOmpTRO9TY&libraries=geometry&libraries=places&libraries=visualization"> </script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script type="text/javascript" src="assets/js/shizudata.js"></script>
+<script type="text/javascript" src="assets/js/shizumichi.js"></script>
+<script type="text/javascript" src="assets/js/map.js"></script>
+<script type="text/javascript" src="assets/js/heimenzahyou.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
+
+</body>
+</html>
+
