placeholderをおススメ日影に変更

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div id="caption" class="caption">
             <form action="" method="post">
-                <textarea id="recommend" rows="1" placeholder="私のおススメポイントは？"></textarea>
+                <textarea id="recommend" rows="1" placeholder="私のおススメ日影は？"></textarea>
                 <a href="#" class="button" style="display: none"><i class="fa fa-weixin"></i>投稿</a>
             </form>
         </div>
@@ -132,7 +132,7 @@
             <form id="speech">
                 <input type="button" value="start" id="recognition" name="recognition" onclick="test()" />
             </form>
-            
+
         </div>
     </div>
 </div>
