モーダル関連

--- a/index.html
+++ b/index.html
@@ -59,6 +59,57 @@
 </head>
 <body class="is-loading-0 is-loading-1 is-loading-2 fullscreen">
 
+<!-- モーダル-->
+	<!-- 記事 -->
+	<div id="modal-main">
+		<a class="minitopi1" href="https://beauty.womo.jp/feature106/" target="_blank"><img src="images/modal/minitopi1.jpg" alt="" align="top" width="150" height ="75">今年こそ、本気で美白を極める夏にする！<a>
+		<br>
+		<br>
+		
+		<a class="tomato" href="http://www.beauty-co.jp/news/dbn/healthcare/DB006780/ " target="_blank"><img src="images/modal/tomato.jpg" alt="" align="top" width="150" height ="75">美白都市伝説の真相を解明！キュウリでもヨーグルトでもなくトマト!?<a>
+		<br>
+		<br>
+		
+		<a class="hiyake" href="http://www.beauty-co.jp/news/dbn/trend/DB006685/" target="_blank"><img src="images/modal/hiyake.jpg" alt="" align="top" width="150" height ="75">日焼け後3日がタイムリミット！うっかり日焼けのレスキューテク<a>
+		<br>
+		<br>
+		
+		<a class="oronine" href="http://mery.jp/87676" target="_blank"><img src="images/modal/oronine.png" alt="" align="top" width="150" height ="75">二重も作れる！青缶以上の「オロナイン」200%活用裏ワザ10個♪<a>
+		<br>
+		<br>
+		
+		<a class="cute" href="http://mery.jp/270001" target="_blank"><img src="images/modal/cute.png" alt="" align="" width="150" height ="75">1か月で出来る美容・メイク強化合宿♪<a>
+	</div>
+	
+	<!-- グッズ-->
+	<div id="modal-main2">
+		<a class="first" a href="http://www.cosme.net/product/product_id/10108329/top" target="_blank"><img src="images/modal/first.jpg" alt="" align="top" width="150" height ="75">1位：エクサージュホワイト ピュアホワイト ミルク II<a>
+		<br>
+		<br>
+		
+		<a class="second" a href="http://www.cosme.net/product/product_id/282512/top" target="_blank"><img src="images/modal/second.jpg" alt="" align="top" width="150" height ="75">2位：スキンコンディショナー(ハトムギ化粧水)<a>
+		<br>
+		<br>
+		
+		<a class="third" a href="http://www.cosme.net/product/product_id/2893546/top" target="_blank"><img src="images/modal/third.jpg" alt="" align="top" width="150" height ="75">3位：フェイシャル トリートメント エッセンス<a>
+		<br>
+		<br>
+		
+		<a class="fourth" a href="http://www.cosme.net/product/product_id/10105762/top" target="_blank"><img src="images/modal/fourth.jpg" alt="" align="top" width="150" height ="75">4位：ジェノプティクス オーラ エッセンス<a>
+		<br>
+		<br>
+		
+		<a class="fifth" a href="http://www.cosme.net/product/product_id/10111536/top" target="_blank"><img src="images/modal/fifth.jpg" alt="" align="top" width="150" height ="75">5位：スノービューティー IIINEW<a>
+		<br>
+		<br>
+	</div>
+	
+	<!-- 使い方 -->
+	<div id="modal-main3">
+		<p>目的地を検索することで、日陰が多い順のルートが提示されます。</p>
+		<p>日陰率や口コミも参考に最も肌に優しいルートを探すことも可能です！</p>
+	</div>
+
 <!-- Main -->
 <div id="main">
 
@@ -82,13 +133,13 @@
             <a class="thumbnail" href="images/fulls/01.jpg"><div>NAVI</div></a>
         </article>
         <article>
-            <a class="thumbnail" href="images/fulls/02.jpg">もっと美白</a>
+             <p class="thumbnail" id="modal-open" >美白記事</p>
         </article>
         <article>
-            <a class="thumbnail" href="images/fulls/03.jpg" data-position="top center">日焼け止めランキング</a>
+          <p class="thumbnail" id="modal-open2"  data-position="top center">美白グッズランキング</p>
         </article>
         <article>
-            <a class="thumbnail" href="images/fulls/04.jpg">使い方</a>
+             <p class="thumbnail" id="modal-open3" >使い方</p>
         </article>
         <article>
             <a class="thumbnail" href="images/fulls/05.jpg" data-position="top center">クチコミ</a>
@@ -140,6 +191,7 @@
 <!-- Scripts -->
 <script src="assets/thema/js/jquery.min.js"></script>
 <script src="assets/thema/js/skel.min.js"></script>
+<script src="assets/thema/js/index.js"></script>
 <!--[if lte IE 8]><script src="assets/thema/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/thema/js/main.js"></script>
 
