--- a/index.html
+++ b/index.html
@@ -1,41 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8" />
-<link href="assets/css/app.css" rel="stylesheet" type="text/css" media="all" />
-</head>
-
-<body>
-<input type="text" id="place" size="30" maxlength="20">
- <input type="button" value="GO!" onclick="test()">
-
-
-<br />
-<div id="map" style="width:100%;height:100%;"></div>
-<div id="guide"></div>
-
-
-<div id="log"></div>
-<form id="speech">
-    <input type="button" value="start" id="recognition" name="recognition" onclick="test()" />
-</form>
-
-<script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?key=AIzaSyA3EFRj6lO1m-gWC0wkRFGnGFOmpTRO9TY&libraries=geometry&libraries=places&libraries=visualization"> </script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script type="text/javascript" src="assets/js/shizudata.js"></script>
-<script type="text/javascript" src="assets/js/shizumichi.js"></script>
-<script type="text/javascript" src="assets/js/map.js"></script>
-<script type="text/javascript" src="assets/js/heimenzahyou.js"></script>
-<script type="text/javascript" src="assets/js/app.js"></script>
-</body>
-</html>
-
-
-
-
-
-
-
 <!DOCTYPE HTML>
 <!--
 	Lens by HTML5 UP
@@ -160,6 +122,9 @@
     </div>
     <div class="slide active">
         <div class="social">
+            <input type="text" id="place" size="30" maxlength="20">
+            <input type="button" value="GO!" onclick="test()">
+            <br />
             <div id="social-icon" style="display:inline-block;">
                 <a href="#" class="btn04"><i class="fa fa-envira" aria-hidden="true"></i></a>
             </div>
@@ -171,19 +136,15 @@
                 <a href="#" class="button" style="display: none"><i class="fa fa-weixin"></i>投稿</a>
             </form>
         </div>
-        <div>
-            <input type="text" id="place" size="30" maxlength="20">
-            <input type="button" value="GO!" onclick="test()">
 
-            <br />
+        <div>
             <div id="map" class="image"></div>
             <div id="guide"></div>
 
             <div id="log"></div>
-            <form id="speech">
+            <!-- <form id="speech">
                 <input type="button" value="start" id="recognition" name="recognition" onclick="test()" />
-            </form>
-
+            </form>  -->
         </div>
     </div>
 </div>
@@ -205,4 +166,3 @@
 
 </body>
 </html>
-
