日影率をアバウト追加

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         mizuki1437：とてもよいポイントです！<br>
         mizuki1437：とてもよいポイントです！<br><br><br><br><br>
     </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="block">
+            日影率 <span>90</span>%
+        </div>
+    </footer>
 </div>
 
 <div id="viewer">
