整理整頓、コメント追記

--- a/index.html
+++ b/index.html
@@ -27,45 +27,45 @@
 		<a class="minitopi1" href="https://beauty.womo.jp/feature106/" target="_blank"><img src="images/modal/minitopi1.jpg" alt="" align="top" width="150" height ="75">今年こそ、本気で美白を極める夏にする！<a>
 		<br>
 		<br>
-		
+
 		<a class="tomato" href="http://www.beauty-co.jp/news/dbn/healthcare/DB006780/ " target="_blank"><img src="images/modal/tomato.jpg" alt="" align="top" width="150" height ="75">美白都市伝説の真相を解明！キュウリでもヨーグルトでもなくトマト!?<a>
 		<br>
 		<br>
-		
+
 		<a class="hiyake" href="http://www.beauty-co.jp/news/dbn/trend/DB006685/" target="_blank"><img src="images/modal/hiyake.jpg" alt="" align="top" width="150" height ="75">日焼け後3日がタイムリミット！うっかり日焼けのレスキューテク<a>
 		<br>
 		<br>
-		
+
 		<a class="oronine" href="http://mery.jp/87676" target="_blank"><img src="images/modal/oronine.png" alt="" align="top" width="150" height ="75">二重も作れる！青缶以上の「オロナイン」200%活用裏ワザ10個♪<a>
 		<br>
 		<br>
-		
+
 		<a class="cute" href="http://mery.jp/270001" target="_blank"><img src="images/modal/cute.png" alt="" align="" width="150" height ="75">1か月で出来る美容・メイク強化合宿♪<a>
 	</div>
-	
+
 	<!-- グッズ-->
 	<div id="modal-main2">
 		<a class="first" a href="http://www.cosme.net/product/product_id/10108329/top" target="_blank"><img src="images/modal/first.jpg" alt="" align="top" width="150" height ="75">1位：エクサージュホワイト ピュアホワイト ミルク II<a>
 		<br>
 		<br>
-		
+
 		<a class="second" a href="http://www.cosme.net/product/product_id/282512/top" target="_blank"><img src="images/modal/second.jpg" alt="" align="top" width="150" height ="75">2位：スキンコンディショナー(ハトムギ化粧水)<a>
 		<br>
 		<br>
-		
+
 		<a class="third" a href="http://www.cosme.net/product/product_id/2893546/top" target="_blank"><img src="images/modal/third.jpg" alt="" align="top" width="150" height ="75">3位：フェイシャル トリートメント エッセンス<a>
 		<br>
 		<br>
-		
+
 		<a class="fourth" a href="http://www.cosme.net/product/product_id/10105762/top" target="_blank"><img src="images/modal/fourth.jpg" alt="" align="top" width="150" height ="75">4位：ジェノプティクス オーラ エッセンス<a>
 		<br>
 		<br>
-		
+
 		<a class="fifth" a href="http://www.cosme.net/product/product_id/10111536/top" target="_blank"><img src="images/modal/fifth.jpg" alt="" align="top" width="150" height ="75">5位：スノービューティー IIINEW<a>
 		<br>
 		<br>
 	</div>
-	
+
 	<!-- 使い方 -->
 	<div id="modal-main3">
 		<p>目的地を検索することで、日陰が多い順のルートが提示されます。</p>
@@ -117,8 +117,8 @@
 
     <!-- Footer -->
     <footer id="footer">
-        <div class="block">
-            日影率 <span>90</span>%
+        <div class="block" id="hikage">
+            <!-- 日影率 <span>90</span>% -->
         </div>
     </footer>
 </div>
@@ -165,7 +165,6 @@
 
 <script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?key=AIzaSyA3EFRj6lO1m-gWC0wkRFGnGFOmpTRO9TY&libraries=geometry&libraries=places&libraries=visualization"> </script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-<script type="text/javascript" src="assets/js/shizudata.js"></script>
 <script type="text/javascript" src="assets/js/shizumichi.js"></script>
 <script type="text/javascript" src="assets/js/map.js"></script>
 <script type="text/javascript" src="assets/js/heimenzahyou.js"></script>
